k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/ssl-redirect: "true"
  nginx.ingress.kubernetes.io/configuration-snippet: | 
   proxy_ssl_server_name on;
   proxy_set_header ssl-client-thumbprint $ssl_client_fingerprint;
   more_set_headers 'X-Content-Type-Options: nosniff';
  nginx.ingress.kubernetes.io/auth-tls-secret: "testclientcert/client-cert-chain"
  nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
  nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
 name: testserver-ingress
spec:
 rules:
 - host: localhost
   http:
    paths:
    - backend:
       serviceName: "testserver"
       servicePort: 80
      path: /weatherforecast
